--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet test --verbosity normal
   
     - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push ./<project>/out/*.nupkg -k ${DEVOPS_TOKEN} -s https://hig.pkgs.visualstudio.com/_packaging/RSP/nuget/v3/index.json --skip-duplicate
+      run: dotnet nuget push *.nupkg --source https://hig.pkgs.visualstudio.com/_packaging/RSP/nuget/v3/index.json -k ${DEVOPS_TOKEN} --skip-duplicate
     
     env:
       DEVOPS_TOKEN: ${{ secrets.DEVOPS_TOKEN }}
